--- a/src/Pages/DeckDetails/DeckDetailsPage.css
+++ b/src/Pages/DeckDetails/DeckDetailsPage.css
@@ -29,3 +29,7 @@
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
+
+.card{
+    background-color: var(--main-background) !important;
+}
