--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root{
   --main-color: #A63D40;
   --main-background: #f8f7f7;
+  --text-color: #a5a5a5;
 }
 
 .App {
@@ -14,12 +15,13 @@
 }
 
 body {
-  background-color: white !important; 
+  background-color: var(--main-background) !important; 
   min-height: 100vh;
 } 
 nav{ 
   width: 100%;
   padding: 10px 50px !important;
+  background-color: white !important;
 }
 
 #userImage{
@@ -38,7 +40,7 @@ nav{
   margin-left: -25px;
   padding: 10px;
   text-align: center;
-  background: rgba(var(--bs-light-rgb),var(--bs-bg-opacity));
+  background: white;
 }
 
 .pointer{
