--- a/src/Pages/Register/RegisterPage.css
+++ b/src/Pages/Register/RegisterPage.css
@@ -23,10 +23,10 @@
     margin-bottom: 10px;
     border: none;
     color: white;
-    background-color: black;
+    background-color: var(--main-color);
   }
   .register__google {
-    background-color: #4285f4;
+    background-color: var(--main-color);
   }
   .register div {
     margin-top: 7px;
